--- a/output/team.html
+++ b/output/team.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12 jumbotron mb-3 team-heading" style="background-color: gray; color: black; font-weight: bolder;">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
@@ -25,14 +27,38 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Johnnie</h2>
+        <h2 class="card-title">Johnnie Simpson</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 0001</li>
+            <li class="list-group-item">ID: 01</li>
             <li class="list-group-item">Email: <a href="mailto:johnnie@gmail.com">johnnie@gmail.com</a></li>
-            <li class="list-group-item">Office number: 00002</li>
+            <li class="list-group-item">Office number: 001</li>
+        </ul>
+    </div>
+</div><div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Hannah Muchnick</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 02</li>
+            <li class="list-group-item">Email: <a href="mailto:hannah@gmail.com">hannah@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/balokdecoy" target="_blank" rel="noopener noreferrer">balokdecoy</a></li>
+        </ul>
+    </div>
+</div><div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Maggie Moo</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 03</li>
+            <li class="list-group-item">Email: <a href="mailto:cat@gmail.com">cat@gmail.com</a></li>
+            <li class="list-group-item">School: Cat University</li>
         </ul>
     </div>
 </div>
